add_compile_options(-Wno-unused-parameter)

add_executable(1-1 listing_1.1.cpp)
add_executable(2-1 listing_2.1.cpp)
add_executable(2-2 listing_2.2.cpp)
add_executable(2-3 listing_2.3.cpp)
add_executable(2-4 listing_2.4.cpp)
add_executable(2-5 listing_2.5.cpp)
add_executable(2-6 listing_2.6.cpp)
add_executable(2-7 listing_2.7.cpp)
add_executable(2-8 listing_2.8.cpp)
add_executable(2-9 listing_2.9.cpp)

add_executable(3-1 listing_3.1.cpp)

